# stoner

./: .gitignore  LICENSE  README.md  index.html  latest.json  package-lock.json  package.json  tailwind.config.js
.github/workflows/: release.yml
src/: App.tsx  index.css  phrases.ts  storage.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AddHabitModal.tsx  HabitCard.tsx  LanguageSwitcher.tsx  LockScreen.tsx  PinSetupModal.tsx  PrivacyNoticeModal.tsx  RelapseNoteModal.tsx  SetStreakDateModal.tsx  SettingsView.tsx  StatsView.tsx  Stone.tsx
src/i18n/: en.ts  index.ts  ru.ts  uk.ts
